--- a/public/display.html
+++ b/public/display.html
@@ -3,45 +3,32 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Display v3.18 (bezier redraw)</title>
+  <title>Laserpointer Display v3.19 (static + CR smoothing)</title>
   <style>
     body { margin:0; background:black; overflow:hidden }
+    canvas { display:block; margin:auto; background:black }
     #version {
       position:absolute; top:10px; left:10px;
       color:white; font-family:sans-serif;
       font-size:14px; opacity:0.6; z-index:10;
     }
-    canvas {
-      display:block;
-      margin:auto;
-      background:black;
-      position:absolute;
-      top:0; left:0;
-    }
-    #container {
-      position:relative;
-      width:1024px; height:1024px;
-      margin:auto;
-    }
   </style>
 </head>
 <body>
-  <div id="version">v3.18 (bezier redraw)</div>
-  <div id="container">
-    <canvas id="canvas" width="1024" height="1024"></canvas>
-  </div>
+  <div id="version">v3.19 (static + CR smoothing)</div>
+  <canvas id="canvas" width="1024" height="1024"></canvas>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
     socket.emit("identify", { role:"display", deviceId:null });
 
-    const canvas = document.getElementById("canvas"),
-          ctx    = canvas.getContext("2d"),
-          CX     = canvas.width/2,
-          CY     = canvas.height/2;
+    const c    = document.getElementById("canvas"),
+          ctx  = c.getContext("2d"),
+          CX   = c.width/2,
+          CY   = c.height/2;
 
-    // Admin-Settings (werden live überschrieben)
+    // live-config von Admin
     let MAX_H = 20, MAX_V = 20, MIN_W = 5, MAX_W = 12, SMOOTH = 0.15;
     socket.on("updateSettings", cfg => {
       if (typeof cfg.maxH   === "number") MAX_H  = cfg.maxH;
@@ -51,53 +38,44 @@
       if (typeof cfg.smooth === "number") SMOOTH = cfg.smooth;
     });
 
-    const SPEED_THRESH = 2000; // px/s
+    const SPEED_THRESH = 2000;  // px/s
 
-    // State pro Gerät
-    const alpha0    = {},   // Kalibrier-Nullpunkt α
-          beta0     = {},   // Kalibrier-Nullpunkt β
-          rawPos    = {},   // letzter Roh-Punkt {x,y}
-          lastTime  = {},   // timestamp
-          lastWidth = {},   // gestrichene Breite zuletzt
-          wasDraw   = {},   // ob gezeichnet wurde
-          prev1     = {},   // letzter gezeichneter Punkt
-          prev2     = {},   // zweiter letzter gezeichneter Punkt
-          lastColor = {},   // Farbe zuletzt
-          lastLight = {},   // Helligkeit zuletzt
-          segments  = [];   // {p0,p1,p2,color,width}
+    // State pro Device
+    const alpha0    = {},  // Kalibrier-Nullpunkt α
+          beta0     = {},  // Kalibrier-Nullpunkt β
+          rawPos    = {},  // letzter roher Punkt
+          lastTime  = {},  // timestamp
+          lastWidth = {},  // letzte Breite
+          wasDraw   = {},  // ob Button gedrückt
+          strokes   = {},  // device→Array von Stroke-Arrays
+          lastColor = {},  // Farbe
+          lastLight = {};  // Helligkeit
 
-    // Hilfsfunktion zum Auslesen der Lightness aus "hsl(...,50%)"
+    // HSL-Lightness auslesen
     function parseLight(hsl) {
       const m = hsl.match(/,\s*(\d+)%\)/);
       return m ? +m[1] : 50;
     }
 
-    // Reset bei Clear
+    // Catmull-Rom-Interpolation
+    function crPoint(p0,p1,p2,p3,t){
+      const t2 = t*t, t3 = t2*t;
+      return {
+        x: 0.5*(2*p1.x + (p2.x-p0.x)*t + (2*p0.x-5*p1.x+4*p2.x-p3.x)*t2 + (-p0.x+3*p1.x-3*p2.x+p3.x)*t3),
+        y: 0.5*(2*p1.y + (p2.y-p0.y)*t + (2*p0.y-5*p1.y+4*p2.y-p3.y)*t2 + (-p0.y+3*p1.y-3*p2.y+p3.y)*t3)
+      };
+    }
+
+    // Löschen-Event
     socket.on("clear", () => {
-      segments.length = 0;
-      ctx.clearRect(0,0,canvas.width,canvas.height);
-      for (let id in rawPos) {
-        delete rawPos[id];
-        delete alpha0[id];
-        delete beta0[id];
-        delete lastTime[id];
-        delete lastWidth[id];
-        delete wasDraw[id];
-        delete prev1[id];
-        delete prev2[id];
-        delete lastColor[id];
-        delete lastLight[id];
-      }
+      ctx.clearRect(0,0,c.width,c.height);
+      for (let id in strokes) strokes[id] = [];
     });
 
-    // Empfang neuer Bewegungsdaten
+    // Neue Bewegungsdaten
     socket.on("motion", ({alpha,beta,color,isDrawing,deviceId}) => {
       if (!deviceId || typeof alpha !== "number") return;
       const now = performance.now();
-
-      // Farbe & Lightness merken
-      lastColor[deviceId] = color;
-      lastLight[deviceId] = parseLight(color);
 
       // Erst-Initialisierung
       if (!(deviceId in rawPos)) {
@@ -105,115 +83,88 @@
         lastTime[deviceId] = now;
         lastWidth[deviceId]= (MIN_W + MAX_W)/2;
         wasDraw[deviceId]  = false;
-        prev1[deviceId] = prev2[deviceId] = null;
-        alpha0[deviceId] = beta0[deviceId] = null;
+        strokes[deviceId]  = [];
+        alpha0[deviceId]   = null;
+        beta0[deviceId]    = null;
       }
 
-      // Kalibrierung beim allerersten Zeichnen
-      if (isDrawing && alpha0[deviceId] === null) {
+      // Farbe & Lightness speichern
+      lastColor[deviceId] = color;
+      lastLight[deviceId] = parseLight(color);
+
+      // Kalibrierung beim ersten Zeichnen
+      if (isDrawing && alpha0[deviceId]===null) {
         alpha0[deviceId] = alpha;
-        beta0 [deviceId] = beta;
+        beta0[deviceId]  = beta;
       }
-      if (alpha0[deviceId] === null) return;
+      if (alpha0[deviceId]===null) return;
 
-      // Winkel-Delta + Wrap-Around
+      // Winkel-Delta + Wrap
       let dA = alpha - alpha0[deviceId];
       if (dA > 180)  dA -= 360;
       if (dA < -180) dA += 360;
-      let dB = beta - beta0[deviceId];
+      let dB = beta  - beta0[deviceId];
 
       // Clamp
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Auf Canvas-Koordinaten mappen
+      // aufs Canvas mappen
       const x = CX - (dA/MAX_H)*CX,
             y = CY - (dB/MAX_V)*CY;
 
-      // Geschwindigkeit in px/s
-      const prevRaw = rawPos[deviceId],
-            dt      = (now - lastTime[deviceId]) / 1000,
-            dist    = Math.hypot(x - prevRaw.x, y - prevRaw.y),
-            speed   = dt>0 ? dist/dt : 0;
-      rawPos[deviceId] = { x, y };
+      // Geschwindigkeit (px/s)
+      const prev  = rawPos[deviceId],
+            dt    = (now - lastTime[deviceId]) / 1000,
+            dist  = Math.hypot(x - prev.x, y - prev.y),
+            speed = dt>0 ? dist/dt : 0;
+      rawPos[deviceId]   = { x,y };
       lastTime[deviceId] = now;
 
-      // Wenn Button neu gedrückt wurde, nicht verbinden
+      // Neuer Stroke-Block, falls Button frisch gedrückt
       if (isDrawing && !wasDraw[deviceId]) {
-        prev1[deviceId] = prev2[deviceId] = null;
+        strokes[deviceId].push([]);
       }
       wasDraw[deviceId] = isDrawing;
 
       if (isDrawing) {
-        // normierte Speed → rohes W [MIN_W..MAX_W]
-        const norm  = Math.min(1, speed/SPEED_THRESH),
-              rawW  = MAX_W - (MAX_W - MIN_W)*norm,
-              wPrev = lastWidth[deviceId],
-              wSmooth = wPrev + (rawW - wPrev)*SMOOTH;
-        lastWidth[deviceId] = wSmooth;
+        // Normierte Geschwindigkeit → rohe Breite
+        const norm = Math.min(1, speed/SPEED_THRESH),
+              rawW = MAX_W - (MAX_W - MIN_W)*norm,
+              wPrev= lastWidth[deviceId],
+              w    = wPrev + (rawW - wPrev)*SMOOTH;
+        lastWidth[deviceId] = w;
 
-        // History schieben
-        prev2[deviceId] = prev1[deviceId];
-        prev1[deviceId] = { x, y, w:wSmooth, color };
+        // Punkt an das aktuelle Stroke-Array hängen
+        const curr = strokes[deviceId].slice(-1)[0];
+        curr.push({ x,y,w,color });
 
-        // nur wenn wir drei Punkte haben, zeichnen
-        if (prev2[deviceId]) {
-          segments.push({
-            p0: prev2[deviceId],
-            p1: prev1[deviceId],
-            p2: {x,y},
-            color,
-            width: wSmooth
-          });
+        // Sobald mind. 4 Punkte da sind, Zeichne nur das neue CR-Segment:
+        if (curr.length>=4) {
+          const len = curr.length;
+          const p0 = curr[len-4],
+                p1 = curr[len-3],
+                p2 = curr[len-2],
+                p3 = curr[len-1];
+          // Schritte anpassen an Strecke
+          const steps = Math.ceil(Math.hypot(p2.x-p1.x,p2.y-p1.y)/8)+1;
+          let prevPt = p1;
+          for (let i=1; i<=steps; i++) {
+            const t = i/steps;
+            const { x:xx, y:yy } = crPoint(p0,p1,p2,p3,t);
+            const ww = p1.w*(1-t) + p2.w*t;
+            ctx.beginPath();
+            ctx.strokeStyle = p1.color;
+            ctx.lineWidth   = ww;
+            ctx.lineCap     = "round";
+            ctx.moveTo(prevPt.x, prevPt.y);
+            ctx.lineTo(xx, yy);
+            ctx.stroke();
+            prevPt = { x:xx, y:yy };
+          }
         }
       }
     });
-
-    // Render-Loop: Bézier redraw + Puls-Punkt
-    let pulse = 0, grow = true;
-    (function render(){
-      // 1) Kurve neu zeichnen
-      ctx.clearRect(0,0,canvas.width,canvas.height);
-      ctx.lineCap  = "round";
-      ctx.lineJoin = "round";
-
-      for (let s of segments) {
-        ctx.strokeStyle = s.color;
-        ctx.lineWidth   = s.width;
-        ctx.beginPath();
-        ctx.moveTo(s.p0.x, s.p0.y);
-        ctx.quadraticCurveTo(s.p1.x, s.p1.y, s.p2.x, s.p2.y);
-        ctx.stroke();
-      }
-
-      // 2) Puls-Punkt
-      pulse += grow?0.2:-0.2;
-      if (pulse>2) grow=false;
-      if (pulse<0) grow=true;
-
-      for (let id in rawPos) {
-        const {x,y} = rawPos[id],
-              col   = lastColor[id] || "#f00",
-              r     = lastWidth[id]/2 + pulse;
-
-        // Füllen
-        ctx.beginPath();
-        ctx.arc(x,y,r,0,2*Math.PI);
-        ctx.fillStyle = col;
-        ctx.fill();
-
-        // Ring falls dunkel
-        if ((lastLight[id]||50) < 20) {
-          ctx.strokeStyle = "#fff";
-          ctx.lineWidth   = 3;
-          ctx.beginPath();
-          ctx.arc(x,y,r+3,0,2*Math.PI);
-          ctx.stroke();
-        }
-      }
-
-      requestAnimationFrame(render);
-    })();
   </script>
 </body>
 </html>
