--- a/public/display.html
+++ b/public/display.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Display v3.19 (static + CR smoothing + Pulse)</title>
+  <title>Laserpointer Display v3.20 (CR smoothing + immediate fallback)</title>
   <style>
     body { margin:0; background:black; overflow:hidden }
-    #container { position:relative; width:1024px; height:1024px; margin:auto; }
-    canvas { position:absolute; top:0; left:0; background:black; }
+    #container { position:relative; width:1024px; height:1024px; margin:auto }
+    canvas { position:absolute; top:0; left:0; background:black }
     #version {
       position:absolute; top:10px; left:10px;
       color:white; font-family:sans-serif;
@@ -16,27 +16,26 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.19 (static + CR smoothing + Pulse)</div>
+  <div id="version">v3.20 (CR smoothing + fallback)</div>
   <div id="container">
-    <!-- Hintergrund: statische Striche -->
     <canvas id="bgCanvas" width="1024" height="1024"></canvas>
-    <!-- Vordergrund: pulsierender Punkt -->
     <canvas id="fgCanvas" width="1024" height="1024"></canvas>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    socket.emit("identify", { role:"display", deviceId:null });
+    socket.emit("identify",{ role:"display", deviceId:null });
 
-    const bg = document.getElementById("bgCanvas"),
-          fg = document.getElementById("fgCanvas"),
+    const bg    = document.getElementById("bgCanvas"),
+          fg    = document.getElementById("fgCanvas"),
           ctxBG = bg.getContext("2d"),
           ctxFG = fg.getContext("2d"),
-          CX = bg.width/2, CY = bg.height/2;
+          CX    = bg.width/2,
+          CY    = bg.height/2;
 
-    // Admin‐Settings
-    let MAX_H=20, MAX_V=20, MIN_W=5, MAX_W=12, SMOOTH=0.15;
+    // Admin‑Settings
+    let MAX_H = 20, MAX_V = 20, MIN_W = 5, MAX_W = 12, SMOOTH = 0.15;
     socket.on("updateSettings", cfg => {
       if (typeof cfg.maxH   === "number") MAX_H  = cfg.maxH;
       if (typeof cfg.maxV   === "number") MAX_V  = cfg.maxV;
@@ -45,26 +44,24 @@
       if (typeof cfg.smooth === "number") SMOOTH = cfg.smooth;
     });
 
-    const SPEED_THRESH = 2000; // px/s
+    const SPEED_THRESH = 2000;  // px/s
 
-    // State pro Gerät
-    const alpha0    = {},  // Kalibrier-Nullpunkt α
-          beta0     = {},  // Kalibrier-Nullpunkt β
-          rawPos    = {},  // letzter roher Punkt
-          lastTime  = {},  // timestamp
-          lastWidth = {},  // letzte berechnete Breite
-          wasDraw   = {},  // ob Button gedrückt
-          strokes   = {},  // device → [ [Punkt,...], ... ]
-          lastColor = {},  // Farbe
-          lastLight = {};  // Helligkeit
+    // State per device
+    const alpha0    = {},  beta0     = {},
+          rawPos    = {},  lastTime  = {},
+          lastWidth = {},  wasDraw   = {},
+          strokes   = {},  lastColor = {},
+          lastLight = {};
 
-    // Lightness aus HSL extrahieren
+    ctxBG.lineCap  = "round";
+    ctxBG.lineJoin = "round";
+
     function parseLight(hsl) {
       const m = hsl.match(/,\s*(\d+)%\)/);
-      return m? +m[1] : 50;
+      return m ? +m[1] : 50;
     }
 
-    // Catmull-Rom interpolation
+    // Catmull‑Rom helper
     function crPoint(p0,p1,p2,p3,t) {
       const t2 = t*t, t3 = t2*t;
       return {
@@ -73,18 +70,18 @@
       };
     }
 
-    // Canvas löschen
+    // clear
     socket.on("clear", () => {
       ctxBG.clearRect(0,0,bg.width,bg.height);
       for (let id in strokes) strokes[id] = [];
     });
 
-    // Neue Daten vom Control
+    // receive motion
     socket.on("motion", ({alpha,beta,color,isDrawing,deviceId}) => {
-      if (!deviceId || typeof alpha!=="number") return;
+      if (!deviceId || typeof alpha !== "number") return;
       const now = performance.now();
 
-      // Erst-Initialisierung
+      // initialize
       if (!(deviceId in rawPos)) {
         rawPos[deviceId]   = { x:CX, y:CY };
         lastTime[deviceId] = now;
@@ -95,56 +92,75 @@
         beta0[deviceId]    = null;
       }
 
-      // Farbe & Lightness merken
+      // remember color/light
       lastColor[deviceId] = color;
       lastLight[deviceId] = parseLight(color);
 
-      // Kalibrieren beim ersten Zeichnen
+      // calibrate on first draw
       if (isDrawing && alpha0[deviceId]===null) {
         alpha0[deviceId] = alpha;
         beta0[deviceId]  = beta;
       }
       if (alpha0[deviceId]===null) return;
 
-      // Winkel-Delta + Wrap
+      // compute mapped x,y
       let dA = alpha - alpha0[deviceId];
       if (dA>180) dA-=360; if (dA<-180) dA+=360;
       let dB = beta - beta0[deviceId];
-      dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
-      dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
+      dA = Math.max(-MAX_H,Math.min(MAX_H,dA));
+      dB = Math.max(-MAX_V,Math.min(MAX_V,dB));
+      const x = CX - (dA/MAX_H)*CX;
+      const y = CY - (dB/MAX_V)*CY;
 
-      // Map auf Canvas
-      const x = CX - (dA/MAX_H)*CX,
-            y = CY - (dB/MAX_V)*CY;
-
-      // Geschwindigkeit px/s
-      const prev  = rawPos[deviceId],
-            dt    = (now-lastTime[deviceId])/1000,
-            dist  = Math.hypot(x-prev.x, y-prev.y),
-            speed = dt>0 ? dist/dt : 0;
+      // speed
+      const prev = rawPos[deviceId],
+            dt   = (now - lastTime[deviceId])/1000,
+            dist = Math.hypot(x-prev.x, y-prev.y),
+            speed= dt>0 ? dist/dt : 0;
       rawPos[deviceId]   = { x,y };
       lastTime[deviceId] = now;
 
-      // Neuer Stroke-Block, wenn frisch gedrückt
+      // new stroke block?
       if (isDrawing && !wasDraw[deviceId]) strokes[deviceId].push([]);
       wasDraw[deviceId] = isDrawing;
 
       if (isDrawing) {
-        // Breite nach Geschwindigkeit
+        // compute width
         const norm = Math.min(1, speed/SPEED_THRESH),
               rawW = MAX_W - (MAX_W-MIN_W)*norm,
               wPrev= lastWidth[deviceId],
               w    = wPrev + (rawW - wPrev)*SMOOTH;
         lastWidth[deviceId] = w;
 
-        // Punkt ans letzte Stroke-Array hängen
+        // append point
         const curr = strokes[deviceId].slice(-1)[0];
-        curr.push({x,y,w,color});
+        curr.push({ x,y,w,color });
 
-        // Sobald >=4 Punkte, strecke nur das letzte CR-Segment fort
-        if (curr.length >= 4) {
-          const L = curr.length,
-                p0 = curr[L-4],
+        // now draw fallback or CR:
+        const L = curr.length;
+        if (L===1) {
+          // nothing
+        } else if (L===2) {
+          // straight line
+          const p0 = curr[0], p1 = curr[1];
+          ctxBG.beginPath();
+          ctxBG.strokeStyle = p0.color;
+          ctxBG.lineWidth   = p1.w;
+          ctxBG.moveTo(p0.x,p0.y);
+          ctxBG.lineTo(p1.x,p1.y);
+          ctxBG.stroke();
+        } else if (L===3) {
+          // quadratic
+          const [p0,p1,p2] = curr;
+          ctxBG.beginPath();
+          ctxBG.strokeStyle = p1.color;
+          ctxBG.lineWidth   = p1.w;
+          ctxBG.moveTo(p0.x,p0.y);
+          ctxBG.quadraticCurveTo(p1.x,p1.y,p2.x,p2.y);
+          ctxBG.stroke();
+        } else {
+          // Catmull‑Rom for last 4 points
+          const p0 = curr[L-4],
                 p1 = curr[L-3],
                 p2 = curr[L-2],
                 p3 = curr[L-1],
@@ -152,22 +168,21 @@
           let prevPt = p1;
           for (let i=1; i<=steps; i++) {
             const t = i/steps,
-                  { x:xx, y:yy } = crPoint(p0,p1,p2,p3,t),
-                  ww = p1.w*(1-t) + p2.w*t;
+                  pt= crPoint(p0,p1,p2,p3,t),
+                  ww= p1.w*(1-t)+p2.w*t;
             ctxBG.beginPath();
             ctxBG.strokeStyle = p1.color;
             ctxBG.lineWidth   = ww;
-            ctxBG.lineCap     = "round";
-            ctxBG.moveTo(prevPt.x, prevPt.y);
-            ctxBG.lineTo(xx, yy);
+            ctxBG.moveTo(prevPt.x,prevPt.y);
+            ctxBG.lineTo(pt.x,pt.y);
             ctxBG.stroke();
-            prevPt = { x:xx, y:yy };
+            prevPt = pt;
           }
         }
       }
     });
 
-    // --- Overlay: Pulsierender Punkt ---
+    // pulsating dot on fg
     let pulse=0, growing=true;
     function drawPulse() {
       ctxFG.clearRect(0,0,fg.width,fg.height);
@@ -177,26 +192,22 @@
 
       for (let id in rawPos) {
         const { x,y } = rawPos[id],
-              wHalf  = (lastWidth[id]||((MIN_W+MAX_W)/2))/2,
-              r      = wHalf + pulse,
-              col    = lastColor[id] || "#f00";
+              r      = (lastWidth[id]||((MIN_W+MAX_W)/2))/2 + pulse,
+              col    = lastColor[id]||"#f00";
 
-        // fill circle
         ctxFG.beginPath();
         ctxFG.fillStyle = col;
         ctxFG.arc(x,y,r,0,2*Math.PI);
         ctxFG.fill();
 
-        // optional weißer Ring bei Dunkelheit
         if ((lastLight[id]||50) < 20) {
           ctxFG.beginPath();
-          ctxFG.lineWidth = 3;
           ctxFG.strokeStyle = "#fff";
+          ctxFG.lineWidth   = 3;
           ctxFG.arc(x,y,r+3,0,2*Math.PI);
           ctxFG.stroke();
         }
       }
-
       requestAnimationFrame(drawPulse);
     }
     drawPulse();
